# nirasa

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP-LOCAL.md  ROADMAP.md  pyproject.toml
configs/tokenizer/: tokenizer_train.yaml
configs/training/: lora_finetune.yaml  mlx_0.5b_full.yaml
docker/: Dockerfile.serve  Dockerfile.train
nirasa/data/: clean.py  dedup.py  download.py  filter.py  prepare.py
nirasa/eval/: perplexity.py  run_eval.py  thaiqa.py  wisesight.py  xnli_th.py
nirasa/serving/: api_server.py  chat_template.py  generate.py
nirasa/tokenizer/: eval_tokenizer.py  train_tokenizer.py
nirasa/training/: train.py
notebooks/: post_training_cells.md  train_7b_colab.ipynb
scripts/: clean_and_dedup_all.py  debug_generate.py  download_all_th.py  download_extra_th.py  download_wiki_th.py  filter_and_tokenize_all.py  prepare_data_colab.py  prepare_mlx_data.py  run_data_pipeline.py  setup_and_run.sh  smoke_test.py  test_generate.py  train_colab.py  train_mlx.sh
tests/: test_data_pipeline.py  test_eval.py  test_serving.py
